autocommit 2015-06-04 14:39:28